Bug fixes, code polishing

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -69,7 +69,7 @@ PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
 bin_PROGRAMS = msim
-msim_SOURCES =  	cmd.c 	cmd.h 	debug.c 	debug.h 	device.c 	device.h 	endi.h 	fault.c 	fault.h 	gdb.c 	gdb.h 	instr.c 	instr.h 	machine.c 	machine.h 	main.c 	mcons.h 	mtypes.h 	output.c 	output.h 	parser.c 	parser.h 	processor.c 	processor.h 	text.c 	text.h 	dcpu.c 	dcpu.h 	ddisk.c 	ddisk.h 	dkeyboard.c 	dkeyboard.h 	dorder.c 	dorder.h 	dprinter.c 	dprinter.h 	dtime.c 	dtime.h 	mem.c 	mem.h 	env.c 	env.h 	check.c 	check.h 	utils.c 	utils.h
+msim_SOURCES =  	cmd.c 	cmd.h 	debug.c 	debug.h 	device.c 	device.h 	endi.h 	fault.c 	fault.h 	gdb.c 	gdb.h 	instr.c 	instr.h 	machine.c 	machine.h 	main.c 	mcons.h 	mtypes.h 	input.c 	input.h 	output.c 	output.h 	parser.c 	parser.h 	processor.c 	processor.h 	text.c 	text.h 	dcpu.c 	dcpu.h 	ddisk.c 	ddisk.h 	dkeyboard.c 	dkeyboard.h 	dorder.c 	dorder.h 	dprinter.c 	dprinter.h 	dtime.c 	dtime.h 	mem.c 	mem.h 	env.c 	env.h 	check.c 	check.h 	utils.c 	utils.h
 
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
@@ -82,8 +82,8 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 msim_OBJECTS =  cmd.o debug.o device.o fault.o gdb.o instr.o machine.o \
-main.o output.o parser.o processor.o text.o dcpu.o ddisk.o dkeyboard.o \
-dorder.o dprinter.o dtime.o mem.o env.o check.o utils.o
+main.o input.o output.o parser.o processor.o text.o dcpu.o ddisk.o \
+dkeyboard.o dorder.o dprinter.o dtime.o mem.o env.o check.o utils.o
 msim_LDADD = $(LDADD)
 msim_DEPENDENCIES = 
 msim_LDFLAGS = 
@@ -98,6 +98,12 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
+DEP_FILES =  .deps/check.P .deps/cmd.P .deps/dcpu.P .deps/ddisk.P \
+.deps/debug.P .deps/device.P .deps/dkeyboard.P .deps/dorder.P \
+.deps/dprinter.P .deps/dtime.P .deps/env.P .deps/fault.P .deps/gdb.P \
+.deps/input.P .deps/instr.P .deps/machine.P .deps/main.P .deps/mem.P \
+.deps/output.P .deps/parser.P .deps/processor.P .deps/text.P \
+.deps/utils.P
 SOURCES = $(msim_SOURCES)
 OBJECTS = $(msim_OBJECTS)
 
@@ -105,9 +111,9 @@ all: all-redirect
 .SUFFIXES:
 .SUFFIXES: .S .c .o .s
 $(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.ac $(ACLOCAL_M4) 
-	cd $(top_srcdir) && $(AUTOMAKE) --gnu --include-deps src/Makefile
+	cd $(top_srcdir) && $(AUTOMAKE) --gnu src/Makefile
 
-Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
+Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$(subdir)/$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
@@ -136,9 +142,6 @@ uninstall-binPROGRAMS:
 	list='$(bin_PROGRAMS)'; for p in $$list; do \
 	  rm -f $(DESTDIR)$(bindir)/`echo $$p|sed 's/$(EXEEXT)$$//'|sed '$(transform)'|sed 's/$$/$(EXEEXT)/'`; \
 	done
-
-.c.o:
-	$(COMPILE) -c $<
 
 .s.o:
 	$(COMPILE) -c $<
@@ -194,6 +197,11 @@ distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 subdir = src
 
 distdir: $(DISTFILES)
+	here=`cd $(top_builddir) && pwd`; \
+	top_distdir=`cd $(top_distdir) && pwd`; \
+	distdir=`cd $(distdir) && pwd`; \
+	cd $(top_srcdir) \
+	  && $(AUTOMAKE) --include-deps --build-dir=$$here --srcdir-name=$(top_srcdir) --output-dir=$$top_distdir --gnu src/Makefile
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
@@ -204,6 +212,38 @@ distdir: $(DISTFILES)
 	    || cp -p $$d/$$file $(distdir)/$$file || :; \
 	  fi; \
 	done
+
+DEPS_MAGIC := $(shell mkdir .deps > /dev/null 2>&1 || :)
+
+-include $(DEP_FILES)
+
+mostlyclean-depend:
+
+clean-depend:
+
+distclean-depend:
+	-rm -rf .deps
+
+maintainer-clean-depend:
+
+%.o: %.c
+	@echo '$(COMPILE) -c $<'; \
+	$(COMPILE) -Wp,-MD,.deps/$(*F).pp -c $<
+	@-cp .deps/$(*F).pp .deps/$(*F).P; \
+	tr ' ' '\012' < .deps/$(*F).pp \
+	  | sed -e 's/^\\$$//' -e '/^$$/ d' -e '/:$$/ d' -e 's/$$/ :/' \
+	    >> .deps/$(*F).P; \
+	rm .deps/$(*F).pp
+
+%.lo: %.c
+	@echo '$(LTCOMPILE) -c $<'; \
+	$(LTCOMPILE) -Wp,-MD,.deps/$(*F).pp -c $<
+	@-sed -e 's/^\([^:]*\)\.o[ 	]*:/\1.lo \1.o :/' \
+	  < .deps/$(*F).pp > .deps/$(*F).P; \
+	tr ' ' '\012' < .deps/$(*F).pp \
+	  | sed -e 's/^\\$$//' -e '/^$$/ d' -e '/:$$/ d' -e 's/$$/ :/' \
+	    >> .deps/$(*F).P; \
+	rm -f .deps/$(*F).pp
 info-am:
 info: info-am
 dvi-am:
@@ -241,23 +281,24 @@ distclean-generic:
 
 maintainer-clean-generic:
 mostlyclean-am:  mostlyclean-binPROGRAMS mostlyclean-compile \
-		mostlyclean-tags mostlyclean-generic
+		mostlyclean-tags mostlyclean-depend mostlyclean-generic
 
 mostlyclean: mostlyclean-am
 
-clean-am:  clean-binPROGRAMS clean-compile clean-tags clean-generic \
-		mostlyclean-am
+clean-am:  clean-binPROGRAMS clean-compile clean-tags clean-depend \
+		clean-generic mostlyclean-am
 
 clean: clean-am
 
 distclean-am:  distclean-binPROGRAMS distclean-compile distclean-tags \
-		distclean-generic clean-am
+		distclean-depend distclean-generic clean-am
 
 distclean: distclean-am
 
 maintainer-clean-am:  maintainer-clean-binPROGRAMS \
 		maintainer-clean-compile maintainer-clean-tags \
-		maintainer-clean-generic distclean-am
+		maintainer-clean-depend maintainer-clean-generic \
+		distclean-am
 	@echo "This command is intended for maintainers to use;"
 	@echo "it deletes files that may require special tools to rebuild."
 
@@ -267,12 +308,13 @@ maintainer-clean: maintainer-clean-am
 maintainer-clean-binPROGRAMS uninstall-binPROGRAMS install-binPROGRAMS \
 mostlyclean-compile distclean-compile clean-compile \
 maintainer-clean-compile tags mostlyclean-tags distclean-tags \
-clean-tags maintainer-clean-tags distdir info-am info dvi-am dvi check \
-check-am installcheck-am installcheck install-exec-am install-exec \
-install-data-am install-data install-am install uninstall-am uninstall \
-all-redirect all-am all installdirs mostlyclean-generic \
-distclean-generic clean-generic maintainer-clean-generic clean \
-mostlyclean distclean maintainer-clean
+clean-tags maintainer-clean-tags distdir mostlyclean-depend \
+distclean-depend clean-depend maintainer-clean-depend info-am info \
+dvi-am dvi check check-am installcheck-am installcheck install-exec-am \
+install-exec install-data-am install-data install-am install \
+uninstall-am uninstall all-redirect all-am all installdirs \
+mostlyclean-generic distclean-generic clean-generic \
+maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
