* missing stdio.h in input.c fixed * MULT fix (thx Ondrej Palkovsky <ondrap@penguin.cz>) * u_int64_t -> uint_64 fix

--- a/src/Makefile
+++ b/src/Makefile
@@ -88,7 +88,7 @@ cline.o
 msim_LDADD = $(LDADD)
 msim_DEPENDENCIES = 
 msim_LDFLAGS = 
-CFLAGS = -g -O2
+CFLAGS = -Wall -O0
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
