Uploaded new version 1.3.4rc2

--- a/examples/msim.conf
+++ b/examples/msim.conf
@@ -4,14 +4,21 @@
 
 #set halt_on_error true
 
-add dcpu mips1
+add dcpu p0
 
-add rwm mainmem		0		256k 
-add rwm xxx		0x400000	256k
-add rom startmem	0x1fc00000	1k
+# Create main read-write memory block 256kb in size, starting at 0.
+add rwm m0 0
+m0 generic 256k
+m0 load "kernel.bin"
 
-mainmem load "kernel.bin"
-xxx load "kernel.bin"
-startmem load "loader.bin" 
+# Create read-only memory for kernel binary, starting at 0x400000
+add rom m1 0x400000
+m1 generic 256k
+m1 load "kernel.bin"
 
-add dprinter	printer		0x1000000
+# Create read-only memory for the loader
+add rom m2 0x1fc00000
+m2 fmap "loader.bin" 
+
+# Create output device
+add dprinter printer 0x1000000
