--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -15,7 +15,6 @@ SOURCES = \
 	utils.c \
 	machine.c \
 	fault.c \
-	processor.c \
 	text.c \
 	env.c \
 	cline.c \
@@ -26,6 +25,7 @@ SOURCES = \
 	main.c \
 	gdb.c \
 	parser.c \
+	cpu/processor.c \
 	debug/debug.c \
 	device/ddisk.c \
 	device/dcpu.c \
