--- a/Makefile.in
+++ b/Makefile.in
@@ -28,4 +28,4 @@ clean:
 
 distclean: clean
 	cd src && $(MAKE) distclean
-	rm -f Makefile config.log config.status
+	rm -f Makefile config.log config.status config.h stamp-h
