add supoort for DESTDIR (thx to Vojtech Horky)

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,8 +15,8 @@ msim:
 	cd src && $(MAKE)
 
 install: msim
-	$(INSTALL) -d $(PREFIX)/bin
-	$(INSTALL) -s -m 755 src/msim $(PREFIX)/bin/msim
+	$(INSTALL) -d $(DESTDIR)$(PREFIX)/bin
+	$(INSTALL) -s -m 755 src/msim $(DESTDIR)$(PREFIX)/bin/msim
 
 uninstall:
 	rm -f $(PREFIX)/bin/msim
