--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,10 @@ AC_CONFIG_SRCDIR([src/main.c])
 AM_INIT_AUTOMAKE(msim, 1.3.8)
 
 AC_PROG_CC
+if test "$GCC" = "yes"; then
+	CFLAGS="-O3 -Wall -Wextra -Wno-unused-parameter -Wmissing-prototypes"
+fi
+
 AC_PROG_INSTALL
 
 AC_CHECK_LIB(readline, readline,, [AC_MSG_FAILURE(Library readline not found.)])
