--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -6,7 +6,7 @@
 #
 
 CC = @CC@
-CFLAGS = @CFLAGS@ -Wall -Wextra -Wno-unused-parameter -Wmissing-prototypes
+CFLAGS = @CFLAGS@
 LIBS = @LIBS@
 TARGET = ./../bin/msim
 
