--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -33,6 +33,7 @@ SOURCES = \
 	debug/gdb.c \
 	debug/breakpoint.c \
 	device/cpu/mips_r4000/cpu.c \
+	device/cpu/general_cpu.c \
 	device/mem.c \
 	device/ddisk.c \
 	device/dr4kcpu.c \
