adding basic rv device

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -33,10 +33,12 @@ SOURCES = \
 	debug/gdb.c \
 	debug/breakpoint.c \
 	device/cpu/mips_r4000/cpu.c \
+	device/cpu/riscv_rv32ima/cpu.c \
 	device/cpu/general_cpu.c \
 	device/mem.c \
 	device/ddisk.c \
 	device/dr4kcpu.c \
+	device/drvcpu.c  \
 	device/dcycle.c \
 	device/dkeyboard.c \
 	device/dorder.c \
