added some infrastructure

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -35,6 +35,7 @@ SOURCES = \
 	device/cpu/mips_r4000/cpu.c \
 	device/cpu/riscv_rv32ima/cpu.c \
 	device/cpu/riscv_rv32ima/csr.c \
+	device/cpu/riscv_rv32ima/instr.c \
 	device/cpu/general_cpu.c \
 	device/mem.c \
 	device/ddisk.c \
