load test and regdump instruction

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,4 +35,7 @@ distclean: clean
 	$(RM) -f Makefile config.log config.status config.h stamp-h
 
 rvtest:
+	@echo "\nUnit tests:"
 	$(MAKE) -C src rvtest
+	@echo "\nSystem tests:"
+	cd tests/rvtests ; python3 run_tests.py
