--- a/tests/rvtests/loads/msim.conf
+++ b/tests/rvtests/loads/msim.conf
@@ -1,4 +1,9 @@
 add drvcpu cpu0
-add rom main 0x0
+
+add rom main 0xF0000000
 main generic 4K
 main load "main.bin"
+
+add rwm data 0x0
+data generic 4K
+data load "data.bin"
