jump tests automated

--- a/tests/rvtests/jumps/msim.conf
+++ b/tests/rvtests/jumps/msim.conf
@@ -1,4 +1,8 @@
 add drvcpu cpu0
-add rom main 0x0
+
+add dprinter printer 0x90000000
+printer redir "out.txt"
+
+add rom main 0xF0000000
 main generic 4K
 main load "main.bin"
