scyclecmp test automated and fixed stdby

--- a/tests/rvtests/scyclecmp/msim.conf
+++ b/tests/rvtests/scyclecmp/msim.conf
@@ -1,4 +1,10 @@
 add drvcpu cpu0
-add rwm main 0x0
+
+add rom main 0xF0000000
 main generic 4K
 main load "main.bin"
+
+add rom handler 0x0
+handler generic 4K
+handler load "simple_handler.bin"
+
