virtual translation testing framework

--- a/tests/rvtests/virtual-addressing/msim.conf
+++ b/tests/rvtests/virtual-addressing/msim.conf
@@ -1,14 +1,15 @@
 add drvcpu cpu0
-add rwm main 0x0
+
+add rom handler 0x80000000
+handler generic 4K
+handler load "returning_trap_handler.bin"
+
+add rom main 0xF0000000
 main generic 4K
 main load "main.bin"
+
 add rwm vtable_root 0xFFFD0000
 vtable_root generic 4K
-vtable_root load "vtable_root.bin"
-add rwm vtable_leaf 0xFFFF0000
-vtable_leaf generic 4K
-vtable_leaf load "vtable_leaf.bin"
-add rom data 0xFFFE0000
-data generic 4K
-# data is copy of the leaf vtable
-data load "vtable_leaf.bin" 
+
+add dprinter printer 0x90000000
+printer redir "out.txt"
