access/dirty bit test

--- a/tests/rvtests/virtual-addressing/msim.conf
+++ b/tests/rvtests/virtual-addressing/msim.conf
@@ -11,5 +11,11 @@ main load "main.bin"
 add rwm vtable_root 0xFFFD0000
 vtable_root generic 4K
 
+add rwm vtable_leaf 0xFFFE0000
+vtable_leaf generic 4K
+
 add dprinter printer 0x90000000
 printer redir "out.txt"
+
+add rwm rwx_page 0x10000000
+rwx_page generic 4K
