--- a/tests/rvtests/virtual-addressing/msim.conf
+++ b/tests/rvtests/virtual-addressing/msim.conf
@@ -19,3 +19,14 @@ printer redir "out.txt"
 
 add rwm rwx_page 0x10000000
 rwx_page generic 4K
+
+add rwm ro_page 0x10001000
+ro_page generic 4K
+
+add rwm xo_page 0x10002000
+xo_page generic 4K
+xo_page load "return.bin"
+
+add rwm u_rwx_page 0x10003000
+u_rwx_page generic 4K
+u_rwx_page load "return.bin"
