added user virtual memory tests

--- a/tests/rvtests/virtual-addressing/msim.conf
+++ b/tests/rvtests/virtual-addressing/msim.conf
@@ -30,3 +30,7 @@ xo_page load "return.bin"
 add rwm u_rwx_page 0x10003000
 u_rwx_page generic 4K
 u_rwx_page load "return.bin"
+
+add rwm u_tests_page 0x10008000
+u_tests_page generic 4K
+u_tests_page load "user_tests.bin"
