--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,6 +37,7 @@ SOURCES = \
 	device/cpu/riscv_rv32ima/cpu.c \
 	device/cpu/riscv_rv32ima/csr.c \
 	device/cpu/riscv_rv32ima/instr.c \
+	device/cpu/riscv_rv32ima/tlb.c \
 	device/cpu/riscv_rv32ima/mnemonics.c \
 	device/cpu/riscv_rv32ima/debug.c \
 	device/cpu/riscv_rv32ima/instructions/computations.c \
