--- a/Makefile.in
+++ b/Makefile.in
@@ -33,6 +33,10 @@ distclean: clean
 	$(MAKE) -C src distclean
 	$(MAKE) -C tests/rvtests/unit-tests distclean
 	$(RM) -f Makefile config.log config.status config.h stamp-h
+	
+test:
+	make -C . rvtest
+	bats tests/system/
 
 rvtest:
 	@echo "\nUnit tests:"
