--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -51,6 +51,7 @@ SOURCES = \
 	device/drvcpu.c  \
 	device/dcycle.c \
 	device/dkeyboard.c \
+	device/dnomem.c \
 	device/dorder.c \
 	device/dprinter.c \
 	device/dtime.c \
