--- a/.github/workflows/copr.yml
+++ b/.github/workflows/copr.yml
@@ -7,6 +7,10 @@ on:
   release:
     types:
     - published
+  workflow_run:
+    workflows: [Release]
+    types:
+      - completed
 
 jobs:
   copr-build:
@@ -33,6 +37,6 @@ jobs:
         copr-cli --config copr.conf build-package --nowait main --name msim-git
 
     - name: Trigger COPR rebuild (release)
-      if: ${{ github.event_name == 'release' }}
+      if: ${{ github.event_name != 'push' }}
       run: |
         copr-cli --config copr.conf build-package --nowait main --name msim
