--- a/tests/system/Makefile
+++ b/tests/system/Makefile
@@ -1,6 +1,12 @@
 
 MIPS32_TOOLCHAIN_DIR =
 
+MIPS32_TESTS = \
+	dval \
+	hello \
+	rd \
+	xint
+
 MIPS32_ASFLAGS = \
 	-march=r4000 -mabi=32 -mgp32 -msoft-float -mlong32 -G 0 \
 	-mno-abicalls -fno-pic -fno-builtin -ffreestanding \
@@ -11,13 +17,14 @@ MIPS32_AS = $(MIPS32_TOOLCHAIN_DIR)mipsel-linux-gnu-gcc
 MIPS32_LD = $(MIPS32_TOOLCHAIN_DIR)mipsel-linux-gnu-ld
 MIPS32_OBJCOPY = $(MIPS32_TOOLCHAIN_DIR)mipsel-linux-gnu-objcopy
 
+MIPS32_BOOT_IMAGES = $(addprefix mips32-, $(addsuffix /boot.bin, $(MIPS32_TESTS)))
 
 all:
 	@echo "Run either make mips32 or make riscv32 to rebuild binaries."
 
 .PHONY: all mips32 riscv32
 
-mips32: mips32-dval/boot.bin mips32-hello/boot.bin mips32-rd/boot.bin mips32-xint/boot.bin
+mips32: $(MIPS32_BOOT_IMAGES)
 
 mips32-%/boot.bin: mips32-%/boot.raw
 	$(MIPS32_OBJCOPY) -O binary $< $@
