--- a/contrib/kernel-tutorial-riscv32/volatile/msim.conf
+++ b/contrib/kernel-tutorial-riscv32/volatile/msim.conf
@@ -4,7 +4,7 @@
 # Single processor machine
 add drvcpu cpu0
 
-# Setup main memory for kernel (1M size, starts at 0)
+# Setup main memory for kernel (1M size, starts at 0x80000000)
 add rwm mainmem 0x80000000
 mainmem generic 1M
 mainmem load "kernel/kernel.bin"
