--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on: [push, pull_request]
 
 jobs:
-  build:
+  build-linux:
 
     runs-on: ubuntu-latest
 
@@ -32,3 +32,24 @@ jobs:
 
     - name: Run tests
       run: make test
+
+
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+
+    - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: |
+        brew install makedepend
+
+    - name: configure
+      run: ./configure
+
+    - name: make
+      run: make
+
+    - name: Show version
+      run: ./msim --version
