CI: trying running tests on Mac

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,8 @@ jobs:
     - name: Install dependencies
       run: |
         brew install makedepend
+        curl -L -o pcut.pkg https://github.com/vhotspur/pcut/releases/download/v0.0.4/pcut-0.0.4-Darwin.pkg
+        installer -verbose -pkg pcut.pkg -target /
 
     - name: configure
       run: ./configure
@@ -53,3 +55,6 @@ jobs:
 
     - name: Show version
       run: ./msim --version
+
+    - name: Run tests
+      run: make test
